- Skip logging to result file if the scope or status don't match
  - and disable calling step when logged via DSL
- Log unresolved field value if interpolation fails during result file logging
- Support relative file locations in `@Import` and `@Examples` annotations
- Load all associative meta if features are specified with `--repl` option
- Update dependencies
  - Update scala from v3.5.0 to v3.5.2
  - Update gherkin from v29.0.0 to v30.0.0
  - Update jline from v3.26.3 to v3.27.1
  - Update logback-core from v1.5.9 to v1.5.12
  - Update logback-classic from v1.5.9 to v1.5.12
  - Update jackson-databind from v2.17.2 to v2.18.1
- Add settings(s):
  - `gwen.input.data.readOnly`
- Add implicit variable(s):
  - `gwen.profile.name`
- Add environment variable(s)
  - `GWEN_PROFILE`
- Add DSL step(s):
  - `I attach "<filepath>"`
    - For attaching files to Gwen reports (where the name of the attachment will be the name of the file)
  - `I log record to <resultsFileId> file`
    - For explicitly logging records to configured results files
- Raise deprecations as errors by default instead of logging them as warnings
  | Setting                     | Old default | New default |
  | :-------------------------- | :---------: | :---------: |
  | `gwen.logLevel.deprecations`|   `warn`    |   `error`   |
- | Deprecated Settings          | Use this instead               |
  | :--------------------------- | :----------------------------- |
  | `gwen.cli.options.batch`     | `gwen.launch.options.batch`    |
  | `gwen.cli.options.format`    | `gwen.launch.options.format`   |
  | `gwen.cli.options.inputData` | `gwen.launch.options.inputData`|
  | `gwen.cli.options.dryRun`    | `gwen.launch.options.dryRun`   |
  | `gwen.cli.options.features`  | `gwen.launch.options.features` |
  | `gwen.cli.options.parallel`  | `gwen.launch.options.parallel` |
  | `gwen.cli.options.meta`      | `gwen.launch.options.meta`     |
  | `gwen.cli.options.report`    | `gwen.launch.options.report`   |