@@ -15,9 +15,6 @@ gwen {
   assertion {
     mode = "hard"                 # hard|soft|sustained
   }
-  associative {
-    meta = true
-  }
   auto {
     bind {
       tableData {
@@ -25,9 +22,6 @@ gwen {
           examples = true
         }
       }
-    }
-    discover {
-      meta = true
     }
     trim {
       data {
