@@ -61,40 +61,26 @@ class FeatureStream(inputMeta: List[File], tagFilter: TagFilter) extends LazyLog
     * @return a stream of [FeatureUnit]s found at the location
     */
   def read(location: File, dataFile: Option[File]): LazyList[FeatureUnit] = {
-      val metaFiles = 
-        if (location.getParentFile == null) {
-          discoverMeta(location.getAbsoluteFile.getParentFile, Nil)
-        } else {
-          discoverMetaInPath(location.getParentFile, Nil).reverse
-        }
-      deepRead(location, metaFiles, dataFile)
+      deepRead(location, FileIO.appendFile(inputMeta, Settings.UserMeta), dataFile)
   }
   
   /**
     * Recursively reads and streams features from a single file system location.
     *
     * @param location a file system location to read
-    * @param metaFiles optionally accumulated meta files
+    * @param metaFiles additional meta files
     * @param dataFile optional data file (for data driven execution)
     * @return a stream of [FeatureUnit]s found at the location
     */
   private def deepRead(location: File, metaFiles: List[File], dataFile: Option[File]): LazyList[FeatureUnit] = {
     if (FileIO.isDirectory(location)) {
-      val metas = discoverMeta(location, metaFiles)
       val files = Option(location.listFiles).getOrElse(Array[File]())
-      files.to(LazyList).flatMap(deepRead(_, metas, dataFile)) 
+      files.to(LazyList).flatMap(deepRead(_, metaFiles, dataFile)) 
     } else if (FileIO.isFeatureFile(location)) {
-      val metas = FileIO.appendFile(metaFiles ++ inputMeta, Settings.UserMeta)
-      val unit = FeatureUnit(
-        Root,
-        location, 
-        if (GwenSettings.`gwen.associative.meta`)  {
-          applyAssociativeMeta(location, metas)
-        } else {
-          metas
-        },
-        None,
-        tagFilter)
+      val metas = Option(new File(location.getParentFile(), s"${location.dropExtension}.meta")).filter(_.exists) map { associatveMeta =>
+        (associatveMeta :: metaFiles).distinct
+      } getOrElse metaFiles
+      val unit = FeatureUnit(Root, location, metas, None, tagFilter)
       dataFile match {
         case Some(file) => new FeatureSet(unit, DataSource(file)).to(LazyList)
         case None =>
@@ -109,50 +95,4 @@ class FeatureStream(inputMeta: List[File], tagFilter: TagFilter) extends LazyLog
     }
   }
   
-  /**
-    * Scans for meta files in the specified directory.
-    * 
-    * @param dir the directory to scan in
-    * @param metaFiles list of accumulated meta files
-    */
-  private def discoverMeta(dir: File, metaFiles: List[File]): List[File] = {
-    val files = Option(dir.listFiles).getOrElse(Array[File]())
-    val metas = if (GwenSettings.`gwen.auto.discover.meta`) files.filter(FileIO.isMetaFile).toList else Nil
-    metaFiles ::: metas
-  }
-
-  private def applyAssociativeMeta(featureFile: File, metas: List[File]): List[File] = {
-    var associateMeta: Option[File] = None
-    // filter out all meta associated with other features files
-    val filteredMetas = metas.filter { m => 
-      val associatedFeature = new File(m.getParentFile(), s"${m.simpleName}.feature")
-      val isAssociate = associatedFeature.isSame(Option(featureFile))
-      if (isAssociate) {
-        associateMeta = Some(m)
-      }
-      !isAssociate && !associatedFeature.exists
-    }
-    // put associate meta at end of list to ensure it is loaded last (so it overrides other meta)
-    filteredMetas ++ associateMeta.toList
-  }
-  
-  /**
-    * Scans for data and meta files in the parent hierarchy starting from the 
-    * given directory.
-    * 
-    * @param dir the directory to scan from
-    * @param metaFiles list of accumulated meta files
-    */
-  @tailrec
-  private def discoverMetaInPath(dir: File, metaFiles: List[File]): List[File] = { 
-    val hasParentDir = FileIO.hasParentDirectory(dir) 
-    if (!hasParentDir) {
-      discoverMeta(dir, metaFiles)
-    } else {
-      val parent = dir.getParentFile
-      discoverMetaInPath(parent, discoverMeta(dir, metaFiles))
-    }
-  }
-  
 }
-
