@@ -41,9 +41,7 @@ class GwenSettingsTest extends BaseTest with Matchers {
     GwenSettings.`gwen.launch.options.tags` should be (Nil)
     GwenSettings.`gwen.launch.options.verbose` should be (false)
     GwenSettings.`gwen.assertion.mode` should be (AssertionMode.hard)
-    GwenSettings.`gwen.associative.meta` should be (true)
     GwenSettings.`gwen.auto.bind.tableData.outline.examples` should be (true)
-    GwenSettings.`gwen.auto.discover.meta` should be (true)
     GwenSettings.`gwen.auto.trim.data.csv` should be (false)
     GwenSettings.`gwen.auto.trim.data.json` should be (false)
     GwenSettings.`gwen.behavior.rules` should be (BehaviorMode.lenient)
